frontend: update forms and client
