# openapi.json
@@ -113,13 +113,13 @@
         "operationId": "show",
         "parameters": [
           {
-            "name": "robot_id",
-            "in": "query",
+            "name": "id",
+            "in": "path",
             "required": true,
             "schema": {
               "type": "string",
               "format": "uuid",
-              "title": "Robot Id"
+              "title": "Id"
             }
           }
         ],
@@ -205,13 +205,13 @@
         "operationId": "destroy",
         "parameters": [
           {
-            "name": "robot_id",
-            "in": "query",
+            "name": "id",
+            "in": "path",
             "required": true,
             "schema": {
               "type": "string",
               "format": "uuid",
-              "title": "Robot Id"
+              "title": "Id"
             }
           }
         ],
